--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
   font-family: 'Lato';
 }
 .header {
-  height: 70px;
+  height: 79px;
   background-color: white;
   padding: 0px 100px;
   position: fixed;
@@ -19,6 +19,9 @@ body {
 }
 .header-left-image {
   opacity: 0.5;
+  margin: 15px 0;
+  display: inline-block;
+  box-sizing: border-box;
 }
 /* .header__image {
   padding: 15px 0;
