--- a/css/style.css
+++ b/css/style.css
@@ -2,58 +2,68 @@
 body {
   font-family: 'Raleway';
 }
+.clearfix:after {
+  display: block;
+  content: "";
+  clear: both;
+}
 .font-Lato {
   font-family: 'Lato';
-}
-.header {
-  height: 79px;
-  background-color: white;
-  padding: 0px 100px;
-  position: fixed;
-  width: 100%;
-  box-sizing: border-box;
-  display: inline-block;
 }
 .font-awesome {
   font-family:'FontAwesome';
 }
+
+.btn {
+  text-decoration: none;
+}
+
+.header {
+  background-color: white;
+  padding: 15px 0;
+  position: fixed;
+  width: 100%;
+  box-sizing: border-box;
+  z-index: 1;
+}
+.header-inner {
+  max-width: 1100px;
+  margin: 0 auto;
+}
+
 .header-left-image {
+  float: left;
   opacity: 0.5;
-  margin: 15px 0;
-  display: inline-block;
   box-sizing: border-box;
 }
-/* .header__image {
-  padding: 15px 0;
-  height: 100%;
-  width: auto;
-  float: left;
-  box-sizing: border-box;
-} */
 .header__contactBtn {
-  /* position: absolute;
-  top: 15px;
-  right: 100px; */
   float: right;
   font-size: 12px;
   padding: 14px 12px;
-  margin: 15px 0;
   color: white;
   background-color: #72cfae;
   box-sizing: border-box;
   transition: all 0.3s;
-  /* display: inline-block; */
 }
 .header__contactBtn:hover {
   color:#333;
 }
+
 .main {
   background-color: #f2f2f2; 
+  padding-top: 78px;
 }
+
+
 .theme {
-  margin-top: 70px;
   width: 100%;
-  display: inline-block;
+  padding: 250px 0;
+}
+.theme__inner {
+  max-width: 1100px;
+  margin: 0 auto;  
+  text-align: center;
+  box-sizing: border-box;
 }
 .theme-title {
   font-size: 90px;
@@ -65,26 +75,25 @@ body {
   font-size: 30px;
   color: #c0c0c0;
 }
-.theme__inner {
-  padding: 250px 0;
-  box-sizing: border-box;
-  text-align: center;
-}
+
 
 .section-green {
+  width: 100%;
+  padding-top: 90px;
   background-color: #72cfae;
-  padding: 0px 150px;
   box-sizing: border-box;
 }
+.section-green-inner {
+  max-width: 1100px;
+  margin: 0 auto;
+}
+
 .section-green-image {
-  padding-top: 50px;
-  box-sizing: border-box;
+  float: left;
 }
 .section-green-text {
-  margin-top: 50px;
   float: right;
   width: 750px;
-  
 }
 .section-green-text__title {
   text-align: center;
@@ -100,16 +109,22 @@ body {
   word-break: break-all;
 }
 
+
+.article {
+  padding: 60px 0 70px 0;
+  width: 100%
+}
 .article-inner{
-  text-align: center;
+  max-width: 1100px;
+  margin: 0 auto;
 }
 .article-inner__title {
   color: #333;
-  margin-top: 60px;
   font-size: 24px;
+  text-align: center;
 }
 .article-inner__imageBox {
-  margin: 40px 0px 80px 0px;
+  padding: 40px 0px 90px 0px;
   font-size: 0px;
 }
 .article-inner__image {
@@ -127,16 +142,13 @@ body {
 .article-inner__image:nth-child(n+4) {
   margin-top: 80px;
 }
-
 .article-inner__text-and-btn {
-  margin-bottom: 70px;
-  font-size: 12px;
-  display: inline-block;
-
+  max-width: 900px;
+  margin: 0 auto;
 }
 .article-inner__text {
   color: #333;
-  width: 300px;
+  width: 500px;
   float:left;
 }
 .article-inner__btn {
@@ -151,14 +163,21 @@ body {
   color: #333;
 } 
 
+
 .section-black {
-  text-align: center;
-  background-color: #4e4e4e;
+  width: 100%;
   padding: 70px 0 100px 0;
+  background-color: #4e4e4e;
   box-sizing: border-box;
 }
-
+.section-black-inner {
+  max-width: 1100px;
+  margin: 0 auto;
+  text-align: center;
+}
 .section-black__title {
+  font-size: 24px;
+  color: white;
   margin-bottom: 50px;
 }
 .section-black__figureBox  {
@@ -176,50 +195,50 @@ body {
 .section-black__figure:last-child{
   margin-right: 0px;
 }
+
+
 .sns-nav {
-  text-align: center;
+  width: 100%;
+  padding: 200px 0;
 }
 .sns-nav-inner {
-  margin: 200px 0;
+  max-width: 1100px;
+  margin: 0 auto;
   text-align: center;
-  box-sizing: border-box;
-  display: inline-block;
-  
 }
-
 .sns-nav-inner-hover {
   width: 185px;
   transition: all 0.3s;
-  /* background-color:white; */
-  float:left;
+  display: inline-block;
+}
+.sns-nav-inner-hover a {
+  display: block;
 }
 .hover-image {
   color: #72cfae;
-  text-decoration: none;
 }
 .sns-nav-inner-hover:hover{
   background-color:white;
 }
+
+
 .footer {
-  height: 10px;
+  width: 100%;
   padding: 20px 0 25px 0;
   background-color: #72cfae;
-  position: relative;
 }
-
 .footer-inner {
-  position: absolute;
-  right: 150px;
+  max-width: 1100px;
+  margin: 0 auto;
 }
-
 .footer-inner__image {
-  float: left;
+  float: right;
   color:white;
 }
 .footer-inner__title {
   font-size: 10px;
-  float: left;
   color: white;
+  float: right;
 }
 
 
